fix(style): overlay z-index should be bigger

--- a/src/ui/components/universal/SimpleModal.less
+++ b/src/ui/components/universal/SimpleModal.less
@@ -35,7 +35,7 @@
     height: 100%;
     width: 100%;
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 9999; /* Sit on top */
     left: 0;
     top: 0;
     background-color: rgb(0,0,0); /* Black fallback color */
